# codex-discord-relay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  COVERAGE.md  DISCORD_UX.md  RELEASING.md  SECURITY.md  SETUP.md
scripts/: install.ps1  uninstall.ps1
src/: config.rs  lib.rs  main.rs  models.rs  setup.rs  state.rs  windows.rs
src/codex/: capabilities.rs  client.rs  coverage.rs  mod.rs  params.rs  protocol.rs
src/discord/: actions.rs  bot.rs  components.rs  connectors.rs  embeds.rs  host_broker.rs  mod.rs  notifications.rs  projection.rs  provision.rs  requests.rs
src/security/: audit.rs  authorization.rs  mod.rs  password.rs  rate_limit.rs  service.rs  sessions.rs
