[package]
name = "codex-discord-relay"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "Discord command center for local Codex Desktop tasks"
license = "MIT"
homepage = "https://github.com/0rkx/codex-discord-relay"
repository = "https://github.com/0rkx/codex-discord-relay"

[[bin]]
name = "codex-discord"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "5.5"
directories = "6.0"
dotenvy = "0.15"
futures = "0.3"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12.5", default-features = false, features = [
  "builder",
  "cache",
  "client",
  "collector",
  "gateway",
  "http",
  "model",
  "native_tls_backend",
  "utils",
] }
sqlx = { package = "sqlx-core", version = "0.8", default-features = false, features = [
  "_rt-tokio",
  "chrono",
] }
sqlx-sqlite = { version = "0.8", default-features = false, features = [
  "bundled",
  "chrono",
] }
thiserror = "2.0"
tempfile = "3.23"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
keyring-core = "1.0"
sha2 = "0.10"
sysinfo = "0.37"
windows-native-keyring-store = "1.1"
winreg = "0.55"

[dev-dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
